--- a/core/templates/layouts/base.html
+++ b/core/templates/layouts/base.html
@@ -1,119 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description"
-              content="Mofi admin is super flexible, powerful, clean &amp; modern responsive bootstrap 5 admin template with unlimited possibilities.">
-        <meta name="keywords"
-              content="admin template, Mofi admin template, dashboard template, flat admin template, responsive admin template, web app">
-        <meta name="author" content="pixelstrap">
-        <link rel="icon" href="../assets/images/favicon.png" type="image/x-icon">
-        <link rel="shortcut icon"
-              href="../assets/images/favicon.png"
-              type="image/x-icon">
-        <title>TAQWAEMS</title>
-        <!-- Google font-->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
-        <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&amp;display=swap"
-              rel="stylesheet">
-        <link rel="stylesheet"
-              type="text/css"
-              href="{{ url_for('static', filename='assets/css/font-awesome.css') }}">
-        <!-- ico-font-->
-        <link rel="stylesheet"
-              type="text/css"
-              href="{{ url_for('static', filename='assets/css/vendors/icofont.css') }}">
-        <!-- Themify icon-->
-        <link rel="stylesheet"
-              type="text/css"
-              href="{{ url_for('static', filename='assets/css/vendors/themify.css') }}">
-        <!-- Flag icon-->
-        <link rel="stylesheet"
-              type="text/css"
-              href="{{ url_for('static', filename='assets/css/vendors/flag-icon.css') }}">
-        <!-- Feather icon-->
-        <link rel="stylesheet"
-              type="text/css"
-              href="{{ url_for('static', filename='assets/css/vendors/feather-icon.css') }}">
-        <!-- Plugins css start-->
-        <link rel="stylesheet"
-              type="text/css"
-              href="{{ url_for('static', filename='assets/css/vendors/slick.css') }}">
-        <link rel="stylesheet"
-              type="text/css"
-              href="{{ url_for('static', filename='assets/css/vendors/slick-theme.css') }}">
-        <link rel="stylesheet"
-              type="text/css"
-              href="{{ url_for('static', filename='assets/css/vendors/scrollbar.css') }}">
-        <link rel="stylesheet"
-              type="text/css"
-              href="{{ url_for('static', filename='assets/css/vendors/animate.css') }}">
-        <link rel="stylesheet"
-              type="text/css"
-              href="{{ url_for('static', filename='assets/css/vendors/datatables.css') }}">
-        <!-- Plugins css Ends-->
-        <!-- Bootstrap css-->
-        <link rel="stylesheet"
-              type="text/css"
-              href="{{ url_for('static', filename='assets/css/vendors/bootstrap.css') }}">
-        <!-- App css-->
-        <link rel="stylesheet"
-              type="text/css"
-              href="{{ url_for('static', filename='assets/css/style.css') }}">
-        <link id="color"
-              rel="stylesheet"
-              href="{{ url_for('static', filename='assets/css/color-1.css') }}"
-              media="screen">
-        <!-- Responsive css-->
-        <link rel="stylesheet"
-              type="text/css"
-              href="{{ url_for('static', filename='assets/css/responsive.css') }}">
+        <title>TAQWA EDMS</title>
+        <link rel="stylesheet" href="{{ url_for('static', filename='assets/bootstrap5/css/bootstrap.min.css') }}">
+
+        {% block page_css %}
+        {% endblock page_css %}
     </head>
     <body>
-        <!-- login page start-->
-        <div class="container-fluid p-0">
-            {% block body %}
-            {% endblock body %}
-            <footer>
-                  <div class="container p-3 mt-5">
-                        <p class="text-center">2024 &copy; BinoMatrix</p>
-                  </div>
-            </footer>
-            <!-- latest jquery-->
-            <script src="{{ url_for('static', filename='assets/js/jquery.min.js') }}"></script>
-            <!-- Bootstrap js-->
-            <script src="{{ url_for('static', filename='assets/js/bootstrap/bootstrap.bundle.min.js') }}"></script>
-            <!-- feather icon js-->
-            <script src="{{ url_for('static', filename='assets/js/icons/feather-icon/feather.min.js') }}"></script>
-            <script src="{{ url_for('static', filename='assets/js/icons/feather-icon/feather-icon.js') }}"></script>
-            <!-- scrollbar js-->
-            <script src="{{ url_for('static', filename='assets/js/scrollbar/custom.js') }}"></script>
-            <script src="{{ url_for('static', filename='assets/js/scrollbar/simplebar.js') }}"></script>
-            <!-- Sidebar jquery-->
-            <script src="{{ url_for('static', filename='assets/js/config.js') }}"></script>
-            <!-- Plugins JS start-->
-            <script src="{{ url_for('static', filename='assets/js/sidebar-menu.js') }}"></script>
-            <script src="{{ url_for('static', filename='assets/js/sidebar-pin.js') }}"></script>
-            <script src="{{ url_for('static', filename='assets/js/slick/slick.min.js') }}"></script>
-            <script src="{{ url_for('static', filename='assets/js/slick/slick.js') }}"></script>
-            <script src="{{ url_for('static', filename='assets/js/header-slick.js') }}"></script>
-            <script src="{{ url_for('static', filename='assets/js/chart/apex-chart/apex-chart.js') }}"></script>
-            <script src="{{ url_for('static', filename='assets/js/chart/apex-chart/stock-prices.js') }}"></script>
-            <script src="{{ url_for('static', filename='assets/js/chart/apex-chart/moment.min.js') }}"></script>
-            <!-- calendar js-->
-            <script src="{{ url_for('static', filename='assets/js/datatable/datatables/jquery.dataTables.min.js') }}"></script>
-            <script src="{{ url_for('static', filename='assets/js/datatable/datatables/datatable.custom.js') }}"></script>
-            <script src="{{ url_for('static', filename='assets/js/datatable/datatables/datatable.custom1.js') }}"></script>
-            <script src="{{ url_for('static', filename='assets/js/dashboard/dashboard_4.js') }}"></script>
-            <!-- Plugins JS Ends-->
-            <!-- Theme js-->
-            <script src="{{ url_for('static', filename='assets/js/script.js') }}"></script>
-            <script src="{{ url_for('static', filename='assets/js/script1.js') }}"></script>
-            <script src="{{ url_for('static', filename='assets/js/theme-customizer/customizer.js') }}"></script>
-            <!-- Plugin used-->
-        </div>
+        {% block body %}
+        {% endblock body %}
+
+
+
+        <script src="{{ url_for('static', filename='assets/bootstrap5/js/bootstrap.min.js') }}"></script>
+        {% block page_js %}
+        {% endblock page_js %}
     </body>
 </html>
